created html for pricing page

--- a/HTML/pricing.html
+++ b/HTML/pricing.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive Website</title>
     <link rel="stylesheet" href="../CSS/style.css" />
-    <link rel="stylesheet" href="../CSS/clients.css" />
+    <link rel="stylesheet" href="../CSS/pricing.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -323,309 +323,87 @@
         </ul>
       </nav>
 
-      <!-- Testimonials -->
-      <section class="testimonials">
-        <div class="testimonials-header">
-          <h1>What Customers Are Saying About Us On</h1>
-          <div class="stars">
-            <span class="material-symbols-rounded"> hotel_class </span>
-            <div class="trustpilot">
-              <span>Trustpilot</span>
-              <div>
+      <!-- Pricing -->
+      <section class="pricing">
+        <div class="pricing-wrapper">
+          <div class="pricing-shapes">
+            <div class="pricing-rectangle"></div>
+            <div class="pricing-small-circle"></div>
+            <div class="pricing-large-circle"></div>
+          </div>
+          <div class="pricing-header">
+            <h1>Simple Pricing</h1>
+            <h1>Complete Access. Unlimited Websites</h1>
+            <h3>
+              Join 100,000+ customers and get access to unlimited websites. Modern themes and
+              plugins. The ultimate website builder
+            </h3>
+            <div class="reviews">
+              <p>Excellent</p>
+              <div class="pricing-stars">
                 <span class="material-symbols-rounded"> star </span>
                 <span class="material-symbols-rounded"> star </span>
                 <span class="material-symbols-rounded"> star </span>
                 <span class="material-symbols-rounded"> star </span>
                 <span class="material-symbols-rounded"> star </span>
+              </div>
+              <p>reviews on</p>
+              <div class="pricing-trustpilot">
+                <span class="material-symbols-rounded"> hotel_class </span>
+                <span>Trustpilot</span>
               </div>
             </div>
           </div>
-        </div>
-        <div class="testimonials-wrapper">
-          <div class="testimonial">
-            <div class="testimonial-top">
-              <img src="../images/client1.jpg" alt="client 1" />
-              <span>John Smith</span>
-            </div>
-            <div class="testimonial-body">
-              <div>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
+          <div class="pricing-cards">
+            <div class="pricing-card pricing-card-left">
+              <div class="pricing-card-top">
+                <h3>Yearly Access</h3>
+                <h1>$99.99</h1>
+                <div class="pricing-card-stars">
+                  <span class="material-symbols-rounded"> hotel_class </span>
+                  <span class="material-symbols-rounded"> hotel_class </span>
+                  <span class="material-symbols-rounded"> hotel_class </span>
+                  <span class="material-symbols-rounded"> hotel_class </span>
+                  <span class="material-symbols-rounded"> hotel_class </span>
+                </div>
               </div>
-              <p>Lorem ipsum dolor sit amet.</p>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta
-                cumque quod nihil laudantium molestias ut itaque mollitia
-                inventore assumenda, exercitationem ratione accusamus.
-                Voluptatibus vero sapiente magnam dolore ipsa in temporibus.
-              </p>
+              <ul class="pricing-card-list">
+                <li>Hundreds of Website Packs</li>
+                <li>Product Updates</li>
+                <li>Premium Support</li>
+                <li>Unlimited Website Usage</li>
+                <li>Risk Free Guarantee</li>
+                <li>One Time Fee</li>
+              </ul>
+              <button type="button" class="pricing-card-btn">Sign Up Today</button>
             </div>
-          </div>
-          <div class="testimonial">
-            <div class="testimonial-top">
-              <img src="../images/client2.jpg" alt="client 2" />
-              <span>Jack Brown</span>
-            </div>
-            <div class="testimonial-body">
-              <div>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
+            <div class="pricing-card pricing-card-right">
+              <div class="pricing-card-top">
+                <h3>Lifetime Access</h3>
+                <h1>$249.99</h1>
+                <div class="pricing-card-stars">
+                  <span class="material-symbols-rounded"> hotel_class </span>
+                  <span class="material-symbols-rounded"> hotel_class </span>
+                  <span class="material-symbols-rounded"> hotel_class </span>
+                  <span class="material-symbols-rounded"> hotel_class </span>
+                  <span class="material-symbols-rounded"> hotel_class </span>
+                </div>
               </div>
-              <p>Lorem ipsum dolor sit amet.</p>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus
-                nesciunt rerum, labore ea dolor voluptas consequatur accusamus
-                nemo eius maiores repellat architecto facere incidunt quidem
-                corporis aspernatur est porro veniam atque facilis. Consequuntur
-                excepturi inventore debitis culpa odit. Dicta, sint.
-              </p>
-            </div>
-          </div>
-          <div class="testimonial">
-            <div class="testimonial-top">
-              <img src="../images/client3.jpg" alt="client 3" />
-              <span>Ann Smith</span>
-            </div>
-            <div class="testimonial-body">
-              <div>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-              </div>
-              <p>Lorem ipsum dolor sit amet.</p>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Reiciendis sit cumque voluptatibus asperiores eius ut dolorem
-                aliquid odit ex, obcaecati, voluptatem illo ad cum iste nostrum,
-                quaerat voluptatum ratione quisquam qui in nisi laboriosam nihil
-                nam. Animi soluta similique obcaecati saepe, totam in quia eos
-                ullam ab ut error dolore?
-              </p>
-            </div>
-          </div>
-          <div class="testimonial">
-            <div class="testimonial-top">
-              <img src="../images/client4.jpg" alt="client 4" />
-              <span>Nick Peters</span>
-            </div>
-            <div class="testimonial-body">
-              <div>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-              </div>
-              <p>Lorem ipsum dolor sit amet.</p>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Ducimus sequi quas nam quod tempora neque ratione. In inventore
-                temporibus deserunt ea omnis. Itaque, eius perspiciatis iste
-                blanditiis recusandae quis ea!
-              </p>
-            </div>
-          </div>
-          <div class="testimonial">
-            <div class="testimonial-top">
-              <img src="../images/client5.jpg" alt="client 5" />
-              <span>Phillip Doe</span>
-            </div>
-            <div class="testimonial-body">
-              <div>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-              </div>
-              <p>Lorem ipsum dolor sit amet.</p>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Perferendis corrupti vel totam sequi, dolorum nam tempora odio
-                accusantium ipsa excepturi natus quos error hic impedit iste
-                dolorem inventore. Laborum, ullam!
-              </p>
-            </div>
-          </div>
-          <div class="testimonial">
-            <div class="testimonial-top">
-              <img src="../images/client6.jpg" alt="client 6" />
-              <span>Jane Smith</span>
-            </div>
-            <div class="testimonial-body">
-              <div>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-              </div>
-              <p>Lorem ipsum dolor sit amet.</p>
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Asperiores molestiae non vitae adipisci dignissimos laboriosam
-                ipsa, porro modi eius quisquam tenetur possimus provident, sint
-                doloremque quae! Iusto eligendi laudantium quam corrupti
-                molestias sapiente vel culpa ratione labore distinctio,
-                voluptatem ducimus.
-              </p>
-            </div>
-          </div>
-          <div class="testimonial">
-            <div class="testimonial-top">
-              <img src="../images/client7.jpg" alt="client 7" />
-              <span>Jessica Mendez</span>
-            </div>
-            <div class="testimonial-body">
-              <div>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-              </div>
-              <p>Lorem ipsum dolor sit amet.</p>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Ducimus eaque laudantium quos eligendi natus cum sed perferendis
-                alias ab esse molestias assumenda sapiente fugiat, at magni,
-                quisquam laboriosam similique tenetur obcaecati consequatur
-                commodi qui explicabo? Perferendis amet officiis dolores eos.
-              </p>
-            </div>
-          </div>
-          <div class="testimonial">
-            <div class="testimonial-top">
-              <img src="../images/client8.jpg" alt="client 8" />
-              <span>Steve Thompson</span>
-            </div>
-            <div class="testimonial-body">
-              <div>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-              </div>
-              <p>Lorem ipsum dolor sit amet.</p>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Suscipit nam, officia tempora at aliquid hic. Laudantium
-                voluptate, inventore fugit doloribus, ea architecto quam iure
-                fuga est veniam sapiente minus non consectetur quo enim.
-                Dignissimos inventore tempore commodi deserunt odit error fugiat
-                animi nisi, ex aliquid natus? Labore exercitationem ipsum iusto.
-              </p>
-            </div>
-          </div>
-          <div class="testimonial">
-            <div class="testimonial-top">
-              <img src="../images/client9.jpg" alt="client 9" />
-              <span>Maria Greene</span>
-            </div>
-            <div class="testimonial-body">
-              <div>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-              </div>
-              <p>Lorem ipsum dolor sit amet.</p>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Incidunt, quidem. Delectus est molestiae enim neque. Enim maxime
-                itaque, doloribus aspernatur ipsa repellat. Cupiditate
-                perferendis id, alias expedita, vitae quos iste dolorum ad nemo
-                nam exercitationem veritatis minus deleniti molestias quia
-                facere unde excepturi ipsa reiciendis illo aliquam consectetur.
-                Earum officia quisquam ratione, quibusdam unde odit numquam non
-                error aut totam.
-              </p>
-            </div>
-          </div>
-          <div class="testimonial">
-            <div class="testimonial-top">
-              <img src="../images/client10.jpg" alt="client 10" />
-              <span>Alexis Smith</span>
-            </div>
-            <div class="testimonial-body">
-              <div>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-              </div>
-              <p>Lorem ipsum dolor sit amet.</p>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Voluptatum necessitatibus possimus recusandae rerum, numquam
-                pariatur atque labore suscipit cumque autem error accusamus
-                repellat minima minus vitae! Eligendi, unde quam? Quisquam
-                suscipit ullam vel inventore quaerat quos rerum repellat? Sint,
-                voluptates!
-              </p>
-            </div>
-          </div>
-          <div class="testimonial">
-            <div class="testimonial-top">
-              <img src="../images/client11.jpg" alt="client 11" />
-              <span>Bob Brown</span>
-            </div>
-            <div class="testimonial-body">
-              <div>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-              </div>
-              <p>Lorem ipsum dolor sit amet.</p>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab,
-                expedita! Non ea ut voluptatum voluptate molestias iste ad.
-                Quisquam, vero.
-              </p>
-            </div>
-          </div>
-          <div class="testimonial">
-            <div class="testimonial-top">
-              <img src="../images/client12.jpg" alt="client 12" />
-              <span>Rose Henson</span>
-            </div>
-            <div class="testimonial-body">
-              <div>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-              </div>
-              <p>Lorem ipsum dolor sit amet.</p>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
-                quo quaerat dolorem numquam ducimus explicabo, eum eveniet qui
-                veritatis cupiditate! Reprehenderit sint corporis dolorem
-                molestiae magnam! A accusantium reiciendis quasi iste laudantium
-                eius expedita nulla aliquam, neque, voluptas necessitatibus
-                corrupti!
-              </p>
+              <ul class="pricing-card-list">
+                <li>Hundreds of Website Packs</li>
+                <li>Lifetime Product Updates</li>
+                <li>Lifetime Premium Support</li>
+                <li>Unlimited Website Usage</li>
+                <li>Risk Free Guarantee</li>
+                <li>One Time Fee</li>
+              </ul>
+              <button type="button" class="pricing-card-btn">Sign Up Today</button>
             </div>
           </div>
         </div>
       </section>
-
       <!-- Footer -->
-      <footer>
+      <footer hidden>
         <div class="footer-content">
           <div class="footer-top">
             <div class="footer-social-media footer-item">
