Added media queries for smaller screens(1024px) responsiveness

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -369,7 +369,7 @@
           <div class="service">
             <i class="fa-brands fa-rocketchat"></i>
             <h3>Website Creation</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dolores est fugit nesciunt deleniti qui soluta quam veritatis voluptate? Iusto.</p>]
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dolores est fugit nesciunt deleniti qui soluta quam veritatis voluptate? Iusto.</p>
           </div>
         </div>
       </div>
