Added media query for 820px and created hamburger menu

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -29,6 +29,13 @@
           <span>Templates</span>
         </div>
        </a>
+
+       <!-- Menu Icon -->
+       <div class="menu-icon">
+        <div class="line line-1"></div>
+        <div class="line line-2"></div>
+       </div>
+
        <!-- Nav Items -->
         <ul class="nav-items">
           <li class="nav-item"><a href="index.html" class="nav-link">Home</a>
