added media queries for tablets 820px

--- a/HTML/pricing.html
+++ b/HTML/pricing.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../CSS/pricing.css" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -33,6 +33,13 @@
             <span>Templates</span>
           </div>
         </a>
+
+        <!-- Menu Icon -->
+        <div class="menu-icon icon-pages">
+          <div class="line line-1"></div>
+          <div class="line line-2"></div>
+        </div>
+
         <!-- Nav Items -->
         <ul class="nav-items">
           <li class="nav-item">
@@ -46,59 +53,48 @@
                     <i class="fa-solid fa-star"></i>
                     <span>All Features</span>
                   </div>
-
                   <div class="features-list-item">
                     <i class="fa-solid fa-boxes-stacked"></i>
                     <span>100+ Elements</span>
                   </div>
-
                   <div class="features-list-item">
                     <i class="fa-solid fa-file"></i>
                     <span>1000+ Layouts</span>
                   </div>
-
                   <div class="features-list-item">
                     <i class="fa-solid fa-pen-nib"></i>
                     <span>No-code Design</span>
                   </div>
-
                   <div class="features-list-item">
                     <i class="fa-solid fa-wrench"></i>
-                    <span>Theme builder</span>
+                    <span>Theme Builder</span>
                   </div>
-
                   <div class="features-list-item">
                     <i class="fa-solid fa-cart-shopping"></i>
-                    <span>Ecommerence</span>
+                    <span>Ecommerce</span>
                   </div>
-
                   <div class="features-list-item">
                     <i class="fa-solid fa-network-wired"></i>
                     <span>Workflow</span>
                   </div>
-
                   <div class="features-list-item">
                     <i class="fa-solid fa-lightbulb"></i>
                     <span>Marketing</span>
                   </div>
-
                   <div class="features-list-item">
                     <i class="fa-solid fa-code"></i>
                     <span>Developers</span>
                   </div>
-
                   <div class="features-list-item">
                     <i class="fa-solid fa-desktop"></i>
                     <span>Site Examples</span>
                   </div>
-
                   <div class="features-list-item">
                     <i class="fa-solid fa-gears"></i>
                     <span>Integrations</span>
                   </div>
                 </div>
               </div>
-
               <div class="dropdown-1-right">
                 <h3>Services</h3>
                 <div class="dropdown-services">
@@ -109,15 +105,13 @@
                       <span>The #1 Theme Builder</span>
                     </div>
                   </div>
-
                   <div class="dropdown-service">
                     <i class="fa-solid fa-lightbulb"></i>
                     <div class="dropdown-service-item">
                       <span>Marketplace</span>
-                      <span>Modules, Layouts, Themes</span>
+                      <span>Modules, layouts, Themes</span>
                     </div>
                   </div>
-
                   <div class="dropdown-service">
                     <i class="fa-solid fa-cloud"></i>
                     <div class="dropdown-service-item">
@@ -125,7 +119,6 @@
                       <span>Cloud Storage for Designers</span>
                     </div>
                   </div>
-
                   <div class="dropdown-service">
                     <i class="fa-solid fa-brain"></i>
                     <div class="dropdown-service-item">
@@ -133,15 +126,13 @@
                       <span>Build Websites with AI</span>
                     </div>
                   </div>
-
                   <div class="dropdown-service">
                     <i class="fa-solid fa-people-group"></i>
                     <div class="dropdown-service-item">
                       <span>Teams</span>
-                      <span>Collaboration for agencies</span>
+                      <span>Collaboration for Agencies</span>
                     </div>
                   </div>
-
                   <div class="dropdown-service">
                     <i class="fa-solid fa-globe"></i>
                     <div class="dropdown-service-item">
@@ -149,7 +140,6 @@
                       <span>Fast Hosting of the Websites</span>
                     </div>
                   </div>
-
                   <div class="dropdown-service">
                     <i class="fa-solid fa-crown"></i>
                     <div class="dropdown-service-item">
@@ -162,7 +152,6 @@
               </div>
             </div>
           </li>
-
           <li class="nav-item">
             <a href="clients.html" class="nav-link">Clients</a>
             <!-- Dropdown 2 -->
@@ -171,44 +160,36 @@
                 <i class="fa-regular fa-envelope"></i>
                 <h3>Web Design Agencies</h3>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Dolores aliquid, assumenda maiores obcaecati placeat
-                  veritatis.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, at porro natus
+                  tempore sed praesentium?
                 </p>
               </div>
-
               <div class="clients-item">
                 <i class="fa-solid fa-earth-americas"></i>
                 <h3>Online Store Owners</h3>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Dolores aliquid, assumenda maiores obcaecati placeat
-                  veritatis.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, at porro natus
+                  tempore sed praesentium?
                 </p>
               </div>
-
               <div class="clients-item">
                 <i class="fa-brands fa-sketch"></i>
                 <h3>Web Design Freelancers</h3>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Dolores aliquid, assumenda maiores obcaecati placeat
-                  veritatis.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, at porro natus
+                  tempore sed praesentium?
                 </p>
               </div>
-
               <div class="clients-item">
                 <i class="fa-solid fa-store"></i>
                 <h3>Small Business Owners</h3>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Dolores aliquid, assumenda maiores obcaecati placeat
-                  veritatis.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, at porro natus
+                  tempore sed praesentium?
                 </p>
               </div>
             </div>
           </li>
-
           <li class="nav-item">
             <a href="products.html" class="nav-link">Products</a>
             <!-- Dropdown 3 -->
@@ -218,10 +199,9 @@
                   <i class="fa-solid fa-wrench"></i>
                   <div>
                     <span>Theme & Page Builder</span>
-                    <span>The #1 Theme and Visual Page</span>
+                    <span>The #1 Theme and Visual Page Builder</span>
                   </div>
                 </div>
-
                 <div class="product">
                   <i class="fa-solid fa-file"></i>
                   <div>
@@ -229,7 +209,6 @@
                     <span>Themes and Layouts</span>
                   </div>
                 </div>
-
                 <div class="product">
                   <i class="fa-solid fa-book-open"></i>
                   <div>
@@ -237,15 +216,13 @@
                     <span>The Best Theme for Blogger</span>
                   </div>
                 </div>
-
                 <div class="product">
                   <i class="fa-solid fa-envelope"></i>
                   <div>
                     <span>Bloom Email Opt-ins</span>
-                    <span>The Ultimate Email Opt-in</span>
+                    <span>The Ultimate Email Opt-in Plugin</span>
                   </div>
                 </div>
-
                 <div class="product">
                   <i class="fa-solid fa-hashtag"></i>
                   <div>
@@ -257,7 +234,6 @@
               <button type="button">Join to Download</button>
             </div>
           </li>
-
           <li class="nav-item">
             <a href="contact.html" class="nav-link">Contact</a>
             <!-- Dropdown 4 -->
@@ -267,35 +243,30 @@
                   <i class="fa-solid fa-envelope"></i>
                   <span>Get in Touch</span>
                 </div>
-
                 <div>
                   <i class="fa-solid fa-comments"></i>
                   <span>Chat with Sales</span>
                 </div>
-
                 <div>
                   <i class="fa-solid fa-user"></i>
                   <span>Accounts & Bills</span>
                 </div>
-
                 <div>
                   <i class="fa-solid fa-wrench"></i>
                   <span>Technical Support</span>
                 </div>
-
                 <div>
                   <i class="fa-solid fa-people-group"></i>
                   <span>Ask the Community</span>
                 </div>
-
                 <div>
                   <i class="fa-solid fa-file-lines"></i>
                   <span>Documentation</span>
                 </div>
               </div>
+              <button type="button">Chat with Us</button>
             </div>
           </li>
-
           <li class="nav-item">
             <a href="account.html" class="nav-link">Account</a>
             <!-- Dropdown 5 -->
@@ -303,20 +274,17 @@
               <form class="account-form">
                 <div class="account-input-group">
                   <input type="text" placeholder="Username" />
-                  <input type="text" placeholder="Password" />
+                  <input type="password" placeholder="Password" />
                 </div>
                 <div class="check">
                   <input type="checkbox" id="check" />
                   <label for="check">Remember Me</label>
                 </div>
                 <button type="button">Member Login</button>
-                <p>
-                  Forgot Your <span>Username</span> or <span>Password?</span>
-                </p>
+                <p>Forgot Your <span>Username</span> or <span>Password</span>?</p>
               </form>
             </div>
           </li>
-
           <li class="nav-item">
             <a href="pricing.html" class="nav-btn">Pricing</a>
           </li>
@@ -402,6 +370,7 @@
           </div>
         </div>
       </section>
+
       <!-- Footer -->
       <footer>
         <div class="footer-content">
