--- a/HTML/account.html
+++ b/HTML/account.html
@@ -33,6 +33,13 @@
             <span>Templates</span>
           </div>
         </a>
+
+        <!-- Menu Icon -->
+        <div class="menu-icon icon-pages">
+          <div class="line line-1"></div>
+          <div class="line line-2"></div>
+        </div>
+
         <!-- Nav Items -->
         <ul class="nav-items">
           <li class="nav-item">
